Refactored the code, reformatted all code, and added a settings file for FileIO.